# streamblocks-mlir

./: .gitignore  CMakeLists.txt  README.md
cal-compiler/: CMakeLists.txt  cal-compiler.cpp
cal-compiler/compiler/: MLIRGen.cpp
cal-compiler/include/: MLIRGen.h  driver.h
cal-compiler/parser/: AST.cpp  parser.yy
cal-opt/: CMakeLists.txt  cal-opt.cpp
cal-translate/: CMakeLists.txt  cal-translate.cpp
include/: CMakeLists.txt
include/AST/: AST.h
include/ActorMachine/: ActorMachine.td  ActorMachineStructure.td
include/Cal/: CMakeLists.txt  Cal.td  CalDialect.h  CalDialect.td  CalOps.h  CalOps.td  CalStructure.td  CalTypes.h  Passes.h
include/StreamBlocks/: CMakeLists.txt
include/StreamBlocks/AST/: AST.h  QID.h
include/StreamBlocks/Common/: CMakeLists.txt  CommonDialect.h  CommonDialect.td  CommonOps.h  CommonOps.td
include/StreamBlocks/DWF/: CMakeLists.txt  DWFDialect.h  DWFDialect.td  DWFOps.h  DWFOps.td
lib/Cal/: CMakeLists.txt  CalDialect.cpp  CalOps.cpp  CalTypes.cpp  LowerToStd.cpp
lib/StreamBlocks/: CMakeLists.txt
lib/StreamBlocks/Common/: CMakeLists.txt  CommonDialect.cpp
lib/StreamBlocks/DWF/: CMakeLists.txt  DWFDialect.cpp  DWFOps.cpp
lib/StreamBlocks/parser/: parser.y  parser.yy  tokens.l  tokens.ll
src/: parser.y
streamblocks-compiler/: CMakeLists.txt  driver.h  streamblocks-compiler.cpp
streamblocks-compiler/parser/: AST.cpp  parser.yy  tokens.ll
streamblocks-opt/: CMakeLists.txt  streamblocks-opt.cpp
streamblocks-parser/: CMakeLists.txt  CalDriver.h  CalScanner.h  driver.h  inc.h  streamblocks-parser.cpp
streamblocks-parser-bison/: CMakeLists.txt  CalContext.h  driver.h  streamblocks-parser.cpp
streamblocks-parser/parser/: CalParser.jj
streamblocks-translate/: CMakeLists.txt  streamblocks-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/ActorMachine/: am-process-println.mlir
test/Cal/: cal-process-println.mlir  cal-translate.mlir  dummy.mlir
test/StreamBlocks/: dummy.mlir  streamblocks-opt.mlir  streamblocks-translate.mlir
test/StreamBlocks/Cal/: EmptyNamespace.cal
test/parser/: Print.cal  Println.cal
